V0.8.1 - Added `humanCountriesOfTravelSubestimates`, `animalCountriesOfImport`, and `humanCountriesOfTravel`. (#19)
* version bump, changelog entry and GeoJSON file

* updated swagger schema

* Fixed bug which was stopping some fields from being returned on the API
